<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/close_week_summary_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_45">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="36dp"
        android:alpha="10"
        android:background="@drawable/shape_dialog_comment_white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingEnd="24dp"
            android:paddingStart="24dp"
            android:paddingTop="24dp"
            android:text="@string/close_week_success"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black_pearl"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="24dp"
            android:paddingStart="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/close_week_machine" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/close_week_status" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:paddingEnd="24dp"
            android:paddingStart="24dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:paddingBottom="8dp">

            </ScrollView>

            <ListView
                android:id="@+id/close_week_summary_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ListView>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingTop="32dp">

            <Button
                android:id="@+id/close_week_button_accept"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:background="@color/color_accent"
                android:text="@string/action_accept"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>