<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/calculate_commission_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_45">

    <LinearLayout
        android:id="@+id/calculate_commission_layout_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="36dp"
        android:alpha="10"
        android:background="@drawable/shape_dialog_comment_white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/calculate_commission_text_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingEnd="24dp"
            android:paddingStart="24dp"
            android:paddingTop="24dp"
            android:text="@string/sale_revisions_calculate_commission"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black_pearl"
            android:textSize="20sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:theme="@style/MaterialFieldTextLabel">

            <faranjit.currency.edittext.CurrencyEditText
                android:id="@+id/calculate_commission_edit_taken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/sale_revisions_taken"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHighlight="@color/color_accent"
                android:textSize="18sp"
                android:textStyle="bold"
                app:showSymbol="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:theme="@style/MaterialFieldTextLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/calculate_commission_edit_percentage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sale_revisions_commission_percentage"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="2"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHighlight="@color/color_accent"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingTop="32dp">

            <Button
                android:id="@+id/calculate_commission_button_cancel"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginEnd="4dp"
                android:padding="8dp"
                android:text="@string/action_cancel" />

            <Button
                android:id="@+id/calculate_commission_button_accept"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginStart="4dp"
                android:background="@color/color_accent"
                android:padding="8dp"
                android:text="@string/action_calculate"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>